# dentry

./: .gitignore  CMakeLists.txt  README.md  dentry.desktop
src/: MainWindow.cpp  MainWindow.h  Style.h  main.cpp
src/app/: AppMetadata.h  Application.cpp  Application.h  Clipboard.cpp  Clipboard.h
src/app/bindings/: FileListBindings.cpp  FileListBindings.h  SidebarBindings.cpp  SidebarBindings.h
src/app/clipboard/: Clipboard.cpp  Clipboard.h
src/app/controllers/: FileOperationController.cpp  FileOperationController.h  KeyboardController.cpp  KeyboardController.h  NavigationController.cpp  NavigationController.h
src/app/events/: EventBus.cpp  EventBus.h  FileListEvents.cpp  FileListEvents.h  SidebarEvents.cpp  SidebarEvents.h
src/app/input/: InputMap.cpp  InputMap.h  InputRegistry.cpp  InputRegistry.h  WidgetBindings.h
src/formatter/: DateFormatter.cpp  DateFormatter.h  PermissionFormatter.cpp  PermissionFormatter.h  SizeFormatter.cpp  SizeFormatter.h
src/fs/: AFileOperation.cpp  AFileOperation.h  FileInfo.cpp  FileInfo.h  IFileOperation.h  MimeResolver.cpp  MimeResolver.h
src/fs/operations/: CopyOperation.cpp  CopyOperation.h  CreateFileOperation.cpp  CreateFileOperation.h  CreateFolderOperation.cpp  CreateFolderOperation.h  DeleteOperation.cpp  DeleteOperation.h  MoveOperation.cpp  MoveOperation.h  RenameOperation.cpp  RenameOperation.h
src/log/: Logger.cpp  Logger.h
src/model/: AFileSystemModel.cpp  AFileSystemModel.h  FileItem.h  FileSystemModel.cpp  FileSystemModel.h  IFileSystemModel.h
src/model/context_menu/: ContextMenu.h  ContextMenuModel.cpp  ContextMenuModel.h  MenuItem.h  MenuItemDefinition.h
src/model/filesystem/: FileItem.h  FileSystemModel.cpp  FileSystemModel.h
src/model/places/: PlaceItem.h  PlacesModel.cpp  PlacesModel.h
src/ui/: AUIComponent.h  DefaultLayout.h  FileListView.cpp  FileListView.h  IUIComponent.h  MainWindow.cpp  MainWindow.h  PreviewPanel.cpp  PreviewPanel.h  ProgressDialog.cpp  ProgressDialog.h  Sidebar.cpp  Sidebar.h  StatusBar.cpp  StatusBar.h  Style.h  Toolbar.cpp  Toolbar.h  UIComponent.h  resources.qrc  style.qss
src/ui/components/: CentralWidget.cpp  CentralWidget.h  FileListContextMenu.cpp  FileListContextMenu.h  FileListView.cpp  FileListView.h  PreviewPanel.cpp  PreviewPanel.h  ProgressDialog.cpp  ProgressDialog.h  Sidebar.cpp  Sidebar.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h
src/ui/navigation/: NavigationController.cpp  NavigationController.h
src/util/: DateFormatter.cpp  DateFormatter.h  Logger.cpp  Logger.h  PermissionFormatter.cpp  PermissionFormatter.h  SizeFormatter.cpp  SizeFormatter.h
